working logging settings

--- a/oxt/resources/pipstrings_en_US.properties
+++ b/oxt/resources/pipstrings_en_US.properties
@@ -1,51 +1,20 @@
-# Strings for EditorKicker dialog
-ek01=Test Label
-ek02=~Choose
-ek03=Executables (*.exe, *.bin, *.sh)
-# Strings for Alternative Python Script Provider
+# string for logging dialog
+log01=Log Level
+log02=None
+log03=Debug
+log04=Normal
+log05=Log Format
+log06=Log Location
+log07=Copy to Clipboard
+# Strings for Example dialog
+ex01=Test Label
+ex02=~Choose
+ex03=All files (*.*)
+ex04=Executables (*.exe, *.bin, *.sh)
+# General
+empty=
 msg01=Error
-msg02=New module name
-msg03=Module "{}" exists.
-msg04=New library name
-msg05=Library <{}> exists.
-msg06=Python scripts (*.py)
-msg07=All files (*.*)
-msg08=Module not found: \n
-msg09=Rename module
-msg10=Source module did not exist: \n
-msg11=module exists: \n
-msg12=module <{}> exists in document.\nOverwrite?
-msg13=Warning
-msg14=Delete module
-msg15=Delete module <{}>?
-msg16=For security reasons, you cannot run this macro.\n\nFor more information, check the security settings.
-msg17=Create module
-msg18=Create library
-msg19=Edit
-msg20=Substitute
-msg21=Rename
-msg22=Embed in document
-msg23=Export
-msg24=Delete
-msg25=Debug
-msg26=Execute
-msg27=Menu
-msg28=~Close
-msg29=No script found for: \n
-msg30=No provider found for: \n
-msg31=My Macros
-msg32={} Macros 
-msg33=Module
-msg34=Library
-msg35=Python scripts
-msg36=Python shell
-#Strings for debugger
-db_buttons=(('NEXT', 'NEXT', 'basicstepover', 'step over'), ('UNTIL', 'EXIT LOOP', 'basicstepover', 'step over loop'), \
-           ('STEP', 'STEP IN', 'basicstepinto', 'step into'), ('RETURN', 'RETURN', 'basicstepout', 'step out'), \
-           ('RESTART', 'RESTART', 'basicstop', 'stop and restart debugging'), ('EDIT', 'EDIT FILE', 'dsbeditdoc', 'open file in editor'), \
-           ('CONSOLE', 'CONSOLE', 'rect_rounded', 'python shell'), ('QUIT', 'QUIT', 'closedoc', 'stop and quit'))
-lbl01=Stack (double click a frame to display its state)
-lbl02=Local scope (double click to inspect a variable with MRI or Xray)
-msg37="You can't jump outside  the current frame."
-msg38="You can't jump back within the same frame."
-msg39="You can't jump to blank line or comment."
+msg02=Logging Options Changed
+msg03=Logging will change after restart
+msg04=Log Location Copied
+msg05=Log location has been copied to the clipboard
