progress dialogs working

--- a/oxt/resources/pipstrings_en_US.properties
+++ b/oxt/resources/pipstrings_en_US.properties
@@ -18,3 +18,6 @@ msg02=Logging Options Changed
 msg03=Logging will change after restart
 msg04=Log Location Copied
 msg05=Log location has been copied to the clipboard
+msg06=Completed
+msg07=Install Complete
+msg08=Installing
