updates for dialog titles

--- a/oxt/resources/pipstrings_en_US.properties
+++ b/oxt/resources/pipstrings_en_US.properties
@@ -18,6 +18,9 @@ msg02=Logging Options Changed
 msg03=Logging will change after restart
 msg04=Log Location Copied
 msg05=Log location has been copied to the clipboard
-msg06=Completed
-msg07=Install Complete
+msg06=Install Complete
+msg07=No Internet Connection. Install failed.
 msg08=Installing
+# Dialog Tiles
+# if provided title01 will be used instead of tool.oxt.token.lo_implementation_name during installation
+title01=
