--- a/oxt/resources/pipstrings_de.properties
+++ b/oxt/resources/pipstrings_de.properties
@@ -1,3 +1,4 @@
+# German translation.
 log01=Protokollstufe
 log02=Keine
 log03=Debuggen
@@ -5,6 +6,9 @@ log04=Normal
 log05=Protokollformat
 log06=Protokollspeicherort
 log07=In die Zwischenablage kopieren
+log08=Warnung
+log09=Fehler
+log10=Kritisch
 
 # Zeichenfolgen für Beispiel-Dialogfeld
 ex01=Testbezeichnung
