--- a/oxt/resources/pipstrings_el.properties
+++ b/oxt/resources/pipstrings_el.properties
@@ -1,3 +1,4 @@
+# Greek translation.
 log01=Επίπεδο καταγραφής
 log02=Κανένα
 log03=Αποσφαλμάτωση
@@ -5,6 +6,9 @@ log04=Κανονικό
 log05=Μορφή καταγραφής
 log06=Τοποθεσία καταγραφής
 log07=Αντιγραφή στο πρόχειρο
+log08=Προειδοποίηση
+log09=Σφάλμα
+log10=Κρίσιμο
 
 # Συμβολοσειρές για το παράθυρο διαλόγου παραδείγματος
 ex01=Ετικέτα δοκιμής
@@ -13,7 +17,6 @@ ex03=Όλα τα αρχεία (.)
 ex04=Εκτελέσιμα (*.exe, *.bin, *.sh)
 
 # Γενικά
-empty=
 msg01=Σφάλμα
 msg02=Οι επιλογές καταγραφής άλλαξαν
 msg03=Η καταγραφή θα αλλάξει μετά την επανεκκίνηση
