--- a/oxt/resources/pipstrings_en_US.properties
+++ b/oxt/resources/pipstrings_en_US.properties
@@ -6,6 +6,10 @@ log04=Normal
 log05=Log Format
 log06=Log Location
 log07=Copy to Clipboard
+log08=Warning
+log09=Error
+log10=Critical
+
 # Strings for Example dialog
 ex01=Test Label
 ex02=~Choose
