--- a/oxt/resources/pipstrings_hu.properties
+++ b/oxt/resources/pipstrings_hu.properties
@@ -1,3 +1,4 @@
+# Hungarian translation.
 log01=Naplózási szint
 log02=Nincs
 log03=Hibakeresés
@@ -5,6 +6,9 @@ log04=Normál
 log05=Napló formátuma
 log06=Napló helye
 log07=Másolás a vágólapra
+log08=Figyelmeztetés
+log09=Hiba
+log10=Kritikus
 
 # Szövegek a példa párbeszédpanelhez
 ex01=Teszt címke
@@ -13,7 +17,6 @@ ex03=Minden fájl (.)
 ex04=Végrehajtható fájlok (*.exe, *.bin, *.sh)
 
 # Általános
-empty=
 msg01=Hiba
 msg02=Naplózási beállítások megváltoztak
 msg03=A naplózás a rendszer újraindítása után változik meg
