--- a/oxt/resources/pipstrings_it.properties
+++ b/oxt/resources/pipstrings_it.properties
@@ -1,3 +1,4 @@
+# Italian translation.
 log01=Livello di registro
 log02=Nessuno
 log03=Debug
@@ -5,6 +6,9 @@ log04=Normale
 log05=Formato di registro
 log06=Posizione del registro
 log07=Copia negli appunti
+log08=Avviso
+log09=Errore
+log10=Critico
 
 # Stringhe per la finestra di dialogo di esempio
 ex01=Etichetta di prova
@@ -13,7 +17,6 @@ ex03=Tutti i file (.)
 ex04=Eseguibili (*.exe, *.bin, *.sh)
 
 # Generale
-empty=
 msg01=Errore
 msg02=Opzioni di registrazione modificate
 msg03=La registrazione cambierà dopo il riavvio
