--- a/oxt/resources/pipstrings_es.properties
+++ b/oxt/resources/pipstrings_es.properties
@@ -1,3 +1,4 @@
+# Spanish translation
 log01=Nivel de registro
 log02=Ninguno
 log03=Depuración
@@ -5,6 +6,9 @@ log04=Normal
 log05=Formato de registro
 log06=Ubicación del registro
 log07=Copiar al portapapeles
+log08=Advertencia
+log09=Error
+log10=Crítico
 
 # Cadenas para el cuadro de diálogo de ejemplo
 ex01=Etiqueta de prueba
@@ -13,7 +17,6 @@ ex03=Todos los archivos (.)
 ex04=Ejecutables (*.exe, *.bin, *.sh)
 
 # General
-empty=
 msg01=Error
 msg02=Opciones de registro cambiadas
 msg03=El registro cambiará después del reinicio
