--- a/oxt/resources/pipstrings_fr.properties
+++ b/oxt/resources/pipstrings_fr.properties
@@ -1,3 +1,4 @@
+# French translation.
 log01=Niveau de journalisation
 log02=Aucun
 log03=Débogage
@@ -5,6 +6,9 @@ log04=Normal
 log05=Format de journalisation
 log06=Emplacement du journal
 log07=Copier dans le presse-papiers
+log08=Avertissement
+log09=Erreur
+log10=Critique
 
 # Chaînes pour la boîte de dialogue d'exemple
 ex01=Étiquette de test
@@ -13,7 +17,6 @@ ex03=Tous les fichiers (.)
 ex04=Exécutables (*.exe, *.bin, *.sh)
 
 # Général
-empty=
 msg01=Erreur
 msg02=Options de journalisation modifiées
 msg03=La journalisation changera après le redémarrage
