update resource strings

--- a/oxt/resources/pipstrings_en_US.properties
+++ b/oxt/resources/pipstrings_en_US.properties
@@ -25,6 +25,10 @@ msg05=Log location has been copied to the clipboard
 msg06=Install Complete
 msg07=No Internet Connection. Install failed.
 msg08=Installing
+msg09=Changes Detected
+msg10=Changes will take affect after restart.
+
 # Dialog Tiles
 # if provided title01 will be used instead of tool.oxt.token.lo_implementation_name during installation
 title01=
+title02=INFO
