--- a/oxt/resources/pipstrings_nl.properties
+++ b/oxt/resources/pipstrings_nl.properties
@@ -1,4 +1,4 @@
-# Dutch
+# Dutch translation
 log01=Logniveau
 log02=Geen
 log03=Debuggen
@@ -25,6 +25,8 @@ msg05=Loglocatie is gekopieerd naar het klembord
 msg06=Installatie voltooid
 msg07=Geen internetverbinding. Installatie mislukt.
 msg08=Installeren
+msg09=Wijzigingen gedetecteerd
+msg10=Wijzigingen worden van kracht na het opnieuw opstarten
 
 # Titels dialoogvensters
 # als title01 wordt opgegeven, wordt deze gebruikt in plaats van tool.oxt.token.lo_implementation_name tijdens de installatie.
