--- a/oxt/resources/pipstrings_de.properties
+++ b/oxt/resources/pipstrings_de.properties
@@ -26,6 +26,8 @@ msg05=Protokollspeicherort wurde in die Zwischenablage kopiert
 msg06=Installation abgeschlossen
 msg07=Keine Internetverbindung. Installation fehlgeschlagen.
 msg08=Installieren
+msg09=Änderungen erkannt
+msg10=Änderungen werden nach dem Neustart wirksam
 
 # Dialogtitel
 # Wenn title01 bereitgestellt wird, wird es während der Installation anstelle von tool.oxt.token.lo_implementation_name verwendet.
