--- a/oxt/resources/pipstrings_es.properties
+++ b/oxt/resources/pipstrings_es.properties
@@ -25,6 +25,8 @@ msg05=La ubicación del registro se ha copiado en el portapapeles
 msg06=Instalación completa
 msg07=Sin conexión a Internet. La instalación falló.
 msg08=Instalando
+msg09=Cambios detectados
+msg10=Los cambios tendrán efecto después de reiniciar
 
 # Títulos del cuadro de diálogo
 # si se proporciona title01, se utilizará en lugar de tool.oxt.token.lo_implementation_name durante la instalación.
