--- a/oxt/resources/pipstrings_hu.properties
+++ b/oxt/resources/pipstrings_hu.properties
@@ -25,6 +25,8 @@ msg05=A napló helye a vágólapra másolva
 msg06=Telepítés kész
 msg07=Nincs internetkapcsolat. A telepítés sikertelen volt.
 msg08=Telepítés folyamatban
+msg09=Változások észlelve
+msg10=A változások hatályba lépnek az újraindítás után
 
 # Párbeszédpanelek címei
 # ha a title01 meg van adva, akkor az lesz használva az eszköz.oxt.token.lo_implementation_name helyett a telepítés során.
