--- a/oxt/resources/pipstrings_it.properties
+++ b/oxt/resources/pipstrings_it.properties
@@ -25,6 +25,8 @@ msg05=La posizione del registro è stata copiata negli appunti
 msg06=Installazione completata
 msg07=Nessuna connessione Internet. Installazione non riuscita.
 msg08=Installazione in corso
+msg09=Modifiche rilevate
+msg10=Le modifiche avranno effetto dopo il riavvio
 
 # Titoli della finestra di dialogo
 # se viene fornito title01, verrà utilizzato al posto di tool.oxt.token.lo_implementation_name durante l'installazione.
