--- a/oxt/resources/pipstrings_ja.properties
+++ b/oxt/resources/pipstrings_ja.properties
@@ -23,6 +23,8 @@ msg05=\u30ed\u30b0\u306e\u5834\u6240\u304c\u30af\u30ea\u30c3\u30d7\u30dc\u30fc\u
 msg06=\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u304c\u5b8c\u4e86\u3057\u307e\u3057\u305f
 msg07=\u30a4\u30f3\u30bf\u30fc\u30cd\u30c3\u30c8\u306b\u63a5\u7d9a\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002
 msg08=\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u4e2d
+msg09=\u5909\u66f4\u304c\u691c\u51fa\u3055\u308c\u307e\u3057\u305f
+msg10=\u5909\u66f4\u306f\u518d\u8d77\u52d5\u5f8c\u306b\u6709\u52b9\u306b\u306a\u308a\u307e\u3059
 
 # ダイアログタイトル
 # title01が提供された場合、インストール中にtool.oxt.token.lo_implementation_nameの代わりに使用されます。
