--- a/oxt/resources/pipstrings_ko.properties
+++ b/oxt/resources/pipstrings_ko.properties
@@ -23,6 +23,8 @@ msg05=\ub85c\uadf8 \uc704\uce58\uac00 \ud074\ub9bd\ubcf4\ub4dc\uc5d0 \ubcf5\uc0a
 msg06=\uc124\uce58 \uc644\ub8cc
 msg07=\uc778\ud130\ub137 \uc5f0\uacb0 \uc5c6\uc74c. \uc124\uce58 \uc2e4\ud328.
 msg08=\uc124\uce58 \uc911
+msg09=\ubcc0\uc218 \uac80\uc0c9 \uac00\uc774\ud558\uc5ec\ub3c4\uc5d0\ub294
+msg10=\uc7ac\uc2dc\uc791 \ud6c4 \ubcc0\uc218 \uc774\ubbf8\uc9c0\uac00 \uc801\ud569\ub2c8\ub2e4
 
 # 대화 상자 제목
 # title01이 제공되면 설치 중에 tool.oxt.token.lo_implementation_name 대신 사용됩니다.
