--- a/oxt/resources/pipstrings_pt.properties
+++ b/oxt/resources/pipstrings_pt.properties
@@ -1,4 +1,4 @@
-# Portuguese
+# Portuguese translation
 log01=Nível de registro
 log02=Nenhum
 log03=Depuração
@@ -25,6 +25,8 @@ msg05=A localização do registro foi copiada para a área de transferência
 msg06=Instalação concluída
 msg07=Sem conexão com a Internet. A instalação falhou.
 msg08=Instalando
+msg09=Alterações detectadas
+msg10=As alterações terão efeito após a reinicialização
 
 # Títulos da janela de diálogo
 # se title01 for fornecido, ele será usado em vez de tool.oxt.token.lo_implementation_name durante a instalação.
