updates for instaler and language files

--- a/oxt/resources/pipstrings_en_US.properties
+++ b/oxt/resources/pipstrings_en_US.properties
@@ -27,8 +27,10 @@ msg07=No Internet Connection. Install failed.
 msg08=Installing
 msg09=Changes Detected
 msg10=Changes will take affect after restart.
+msg11=Post Processing
 
 # Dialog Tiles
 # if provided title01 will be used instead of tool.oxt.token.lo_implementation_name during installation
 title01=
 title02=INFO
+title03=Post Processing
