--- a/oxt/resources/pipstrings_es.properties
+++ b/oxt/resources/pipstrings_es.properties
@@ -4,7 +4,7 @@ log02=Ninguno
 log03=Depuración
 log04=Normal
 log05=Formato de registro
-log06=Ubicación del registro
+log06=\u0055\u0062\u0069\u0063\u0061\u0063\u0069\u00f3\u006e del registro
 log07=Copiar al portapapeles
 log08=Advertencia
 log09=Error
@@ -19,15 +19,18 @@ ex04=Ejecutables (*.exe, *.bin, *.sh)
 # General
 msg01=Error
 msg02=Opciones de registro cambiadas
-msg03=El registro cambiará después del reinicio
-msg04=Ubicación del registro copiada
-msg05=La ubicación del registro se ha copiado en el portapapeles
-msg06=Instalación completa
-msg07=Sin conexión a Internet. La instalación falló.
+msg03=El registro \u0063\u0061\u006d\u0062\u0069\u0061\u0072\u00e1\u0020\u0064\u0065\u0073\u0070\u0075\u00e9\u0073 del reinicio
+msg04=\u0055\u0062\u0069\u0063\u0061\u0063\u0069\u00f3\u006e del registro copiada
+msg05=La \u0055\u0062\u0069\u0063\u0061\u0063\u0069\u00f3\u006e del registro se ha copiado en el portapapeles
+msg06=\u0049\u006e\u0073\u0074\u0061\u006c\u0061\u0063\u0069\u00f3\u006e completa
+msg07=\u0053\u0069\u006e\u0020\u0063\u006f\u006e\u0065\u0078\u0069\u00f3\u006e\u0020\u0061\u0020\u0049\u006e\u0074\u0065\u0072\u006e\u0065\u0074\u002e\u0020\u004c\u0061\u0020\u0069\u006e\u0073\u0074\u0061\u006c\u0061\u0063\u0069\u00f3\u006e\u0020\u0066\u0061\u006c\u006c\u00f3
 msg08=Instalando
 msg09=Cambios detectados
-msg10=Los cambios tendrán efecto después de reiniciar
+msg10=Los cambios \u0074\u0065\u006e\u0064\u0072\u00e1\u006e efecto \u0064\u0065\u0073\u0070\u0075\u00e9\u0073 de reiniciar
+msg11=Postprocesamiento
 
 # Títulos del cuadro de diálogo
 # si se proporciona title01, se utilizará en lugar de tool.oxt.token.lo_implementation_name durante la instalación.
 # title01=
+title02=\u0049\u004e\u0046\u004f\u0052\u004d\u0041\u0043\u0049\u00d3\u004e
+title03=Postprocesamiento
