--- a/oxt/resources/pipstrings_it.properties
+++ b/oxt/resources/pipstrings_it.properties
@@ -19,15 +19,18 @@ ex04=Eseguibili (*.exe, *.bin, *.sh)
 # Generale
 msg01=Errore
 msg02=Opzioni di registrazione modificate
-msg03=La registrazione cambierà dopo il riavvio
+msg03=La registrazione \u0063\u0061\u006d\u0062\u0069\u0065\u0072\u00e0 dopo il riavvio
 msg04=Posizione del registro copiata
-msg05=La posizione del registro è stata copiata negli appunti
+msg05=La posizione del registro \u00e8 stata copiata negli appunti
 msg06=Installazione completata
 msg07=Nessuna connessione Internet. Installazione non riuscita.
 msg08=Installazione in corso
 msg09=Modifiche rilevate
 msg10=Le modifiche avranno effetto dopo il riavvio
+msg11=Post-elaborazione
 
 # Titoli della finestra di dialogo
 # se viene fornito title01, verrà utilizzato al posto di tool.oxt.token.lo_implementation_name durante l'installazione.
 # title01=
+title02=INFO
+title03=Post-elaborazione
