--- a/oxt/resources/pipstrings_zh.properties
+++ b/oxt/resources/pipstrings_zh.properties
@@ -25,7 +25,10 @@ msg07=\u6ca1\u6709\u7f51\u7edc\u8fde\u63a5\u3002\u5b89\u88c5\u5931\u8d25\u3002
 msg08=\u6b63\u5728\u5b89\u88c5
 msg09=\u68c0\u6d4b\u5230\u66f4\u6539
 msg10=\u91cd\u542f\u540e\u66f4\u6539\u5c06\u751f\u6548
+msg11=\u5f8c\u8655\u7406
 
 # 对话框标题
 # 如果提供了title01，将在安装期间使用它而不是tool.oxt.token.lo_implementation_name。
 # title01=
+title02=\u8cc7\u8a0a
+title03=\u5f8c\u8655\u7406
