add option require_install_name_match
The require_install_name_match when set to true will force the installed extension file name to be a match with the value of lo_pip value in pyproject.toml.

--- a/oxt/resources/pipstrings_en_US.properties
+++ b/oxt/resources/pipstrings_en_US.properties
@@ -29,6 +29,8 @@ msg09=Changes Detected
 msg10=Changes will take affect after restart.
 msg11=Post Processing
 
+msg22=Oxt name {} does not match installed name {}.\nThe extensions must be named {}.oxt before installing.\nRename extension to {}.oxt and reinstall.
+
 # Dialog Tiles
 # if provided title01 will be used instead of tool.oxt.token.lo_implementation_name during installation
 title01=
