--- a/oxt/resources/pipstrings_es.properties
+++ b/oxt/resources/pipstrings_es.properties
@@ -29,6 +29,8 @@ msg09=Cambios detectados
 msg10=Los cambios \u0074\u0065\u006e\u0064\u0072\u00e1\u006e efecto \u0064\u0065\u0073\u0070\u0075\u00e9\u0073 de reiniciar
 msg11=Postprocesamiento
 
+msg22=El nombre de Oxt {} no coincide con el nombre instalado {}.\nLas extensiones deben llamarse {}.oxt antes de instalarlas.\nCambie el nombre de la \u0065\u0078\u0074\u0065\u006e\u0073\u0069\u00f3\u006e a {}.oxt y vuelva a instalarla.
+
 # Títulos del cuadro de diálogo
 # si se proporciona title01, se utilizará en lugar de tool.oxt.token.lo_implementation_name durante la instalación.
 # title01=
