--- a/oxt/resources/pipstrings_de.properties
+++ b/oxt/resources/pipstrings_de.properties
@@ -30,6 +30,8 @@ msg09=\u00c4\u006e\u0064\u0065\u0072\u0075\u006e\u0067\u0065\u006e erkannt
 msg10=\u00c4\u006e\u0064\u0065\u0072\u0075\u006e\u0067\u0065\u006e werden nach dem Neustart wirksam
 msg11=Nachbearbeitung
 
+msg22=Oxt-Name {} stimmt nicht mit dem installierten Namen \u00fc\u0062\u0065\u0072\u0065\u0069\u006e {}.\nDie Erweiterungen \u006d\u00fc\u0073\u0073\u0065\u006e vor der Installation {}.oxt genannt werden.\nBenennen Sie die Erweiterung in {}.oxt um und installieren Sie sie erneut.
+
 # Dialogtitel
 # Wenn title01 bereitgestellt wird, wird es während der Installation anstelle von tool.oxt.token.lo_implementation_name verwendet.
 # title01=
