--- a/oxt/resources/pipstrings_fr.properties
+++ b/oxt/resources/pipstrings_fr.properties
@@ -29,6 +29,8 @@ msg09=Modifications \u0064\u00e9\u0074\u0065\u0063\u0074\u00e9\u0065\u0073
 msg10=Les modifications prendront effet \u0061\u0070\u0072\u00e8\u0073\u0020\u006c\u0065\u0020\u0072\u0065\u0064\u00e9\u006d\u0061\u0072\u0072\u0061\u0067\u0065
 msg11=Post-traitement
 
+msg22=Le nom Oxt {} ne correspond pas au nom \u0069\u006e\u0073\u0074\u0061\u006c\u006c\u00e9 {}.\nLes extensions doivent \u00ea\u0074\u0072\u0065\u0020\u006e\u006f\u006d\u006d\u00e9\u0065\u0073 {}.oxt avant \u006c\u0027\u0069\u006e\u0073\u0074\u0061\u006c\u006c\u0061\u0074\u0069\u006f\u006e.\n\u0052\u0065\u006e\u006f\u006d\u006d\u0065\u007a\u0020\u006c\u0027\u0065\u0078\u0074\u0065\u006e\u0073\u0069\u006f\u006e en {}.oxt et \u0072\u00e9\u0069\u006e\u0073\u0074\u0061\u006c\u006c\u0065\u007a.
+
 # Titres de boîte de dialogue
 # si title01 est fourni, il sera utilisé à la place de tool.oxt.token.lo_implementation_name pendant l'installation
 # title01=
