--- a/oxt/resources/pipstrings_it.properties
+++ b/oxt/resources/pipstrings_it.properties
@@ -29,6 +29,8 @@ msg09=Modifiche rilevate
 msg10=Le modifiche avranno effetto dopo il riavvio
 msg11=Post-elaborazione
 
+msg22=Il nome Oxt {} non corrisponde al nome installato: {}.\nLe estensioni devono essere denominate {}.oxt prima \u0064\u0065\u006c\u006c\u0027\u0069\u006e\u0073\u0074\u0061\u006c\u006c\u0061\u007a\u0069\u006f\u006e\u0065.\nRinomina \u006c\u0027\u0065\u0073\u0074\u0065\u006e\u0073\u0069\u006f\u006e\u0065 in {}.oxt e installala di nuovo.
+
 # Titoli della finestra di dialogo
 # se viene fornito title01, verrà utilizzato al posto di tool.oxt.token.lo_implementation_name durante l'installazione.
 # title01=
