--- a/oxt/resources/pipstrings_nl.properties
+++ b/oxt/resources/pipstrings_nl.properties
@@ -29,6 +29,8 @@ msg09=Wijzigingen gedetecteerd
 msg10=Wijzigingen worden van kracht na het opnieuw opstarten
 msg11=Nabewerking
 
+msg22=Oxt-naam {} komt niet overeen met de \u0067\u0065\u00ef\u006e\u0073\u0074\u0061\u006c\u006c\u0065\u0065\u0072\u0064\u0065 naam: {}.\nExtensies moeten {}.oxt heten \u0076\u00f3\u00f3\u0072 installatie.\nHernoem de extensie naar {}.oxt en installeer opnieuw.
+
 # Titels dialoogvensters
 # als title01 wordt opgegeven, wordt deze gebruikt in plaats van tool.oxt.token.lo_implementation_name tijdens de installatie.
 # title01=
