--- a/oxt/resources/pipstrings_pt.properties
+++ b/oxt/resources/pipstrings_pt.properties
@@ -29,6 +29,8 @@ msg09=Alterações detectadas
 msg10=\u0041\u0073\u0020\u0061\u006c\u0074\u0065\u0072\u0061\u00e7\u00f5\u0065\u0073\u0020\u0074\u0065\u0072\u00e3\u006f\u0020\u0065\u0066\u0065\u0069\u0074\u006f\u0020\u0061\u0070\u00f3\u0073\u0020\u0061\u0020\u0072\u0065\u0069\u006e\u0069\u0063\u0069\u0061\u006c\u0069\u007a\u0061\u00e7\u00e3\u006f
 msg11=\u0050\u00f3\u0073\u002d\u0070\u0072\u006f\u0063\u0065\u0073\u0073\u0061\u006d\u0065\u006e\u0074\u006f
 
+msg22=O nome Oxt {} \u006e\u00e3\u006f corresponde ao nome instalado: {}.\nAs \u0065\u0078\u0074\u0065\u006e\u0073\u00f5\u0065\u0073 devem ser nomeadas {}.oxt antes da \u0069\u006e\u0073\u0074\u0061\u006c\u0061\u00e7\u00e3\u006f.\nRenomeie a \u0065\u0078\u0074\u0065\u006e\u0073\u00e3\u006f para {}.oxt e instale novamente.
+
 # Títulos da janela de diálogo
 # se title01 for fornecido, ele será usado em vez de tool.oxt.token.lo_implementation_name durante a instalação.
 # title01=
