--- a/oxt/resources/pipstrings_zh.properties
+++ b/oxt/resources/pipstrings_zh.properties
@@ -27,6 +27,8 @@ msg09=\u68c0\u6d4b\u5230\u66f4\u6539
 msg10=\u91cd\u542f\u540e\u66f4\u6539\u5c06\u751f\u6548
 msg11=\u5f8c\u8655\u7406
 
+msg22=Oxt \u540d\u79f0 {} \u4e0e\u5df2\u5b89\u88c5\u540d\u79f0 {}\n\u4e0d\u5339\u914d\u3002\u5b89\u88c5\u524d\u5fc5\u987b\u5c06\u6269\u5c55\u547d\u540d\u4e3a {}.oxt\u3002\u5c06\u6269\u5c55\u91cd\u547d\u540d\u4e3a {}.oxt \u5e76\u91cd\u65b0\u5b89\u88c5\u3002
+
 # 对话框标题
 # 如果提供了title01，将在安装期间使用它而不是tool.oxt.token.lo_implementation_name。
 # title01=
