added uninstall dialog

--- a/oxt/resources/pipstrings_de.properties
+++ b/oxt/resources/pipstrings_de.properties
@@ -37,3 +37,22 @@ msg22=Oxt-Name {} stimmt nicht mit dem installierten Namen \u00fc\u0062\u0065\u0
 # title01=
 title02=INFO
 title03=Nachbearbeitung
+
+mbtitle001=Info
+mbmsg001=Nichts ausgew\u00e4hlt
+mbtitle002=Best\u00e4tigung
+mbmsg002=M\u00f6chten Sie die ausgew\u00e4hlten Pakete wirklich deinstallieren?
+mbmsg003=Alle Pakete wurden deinstalliert
+mbmsg004=Nicht alle Pakete konnten deinstalliert werden. Siehe Protokolldatei.
+mbmsg005=Es ist wichtig, dass LibreOffice neu gestartet wird, bevor Pakete deinstalliert werden.\nBitte starten Sie LibreOffice neu und deinstallieren Sie es dann bei Bedarf.\n\nWenn diese Erweiterung nach der Deinstallation nicht entfernt wird, werden die Python-Pakete beim Start von LibreOffice erneut installiert.\n\nSuchen Sie nach der Deinstallation auch in der Protokolldatei nach etwaigen Fehlern.
+mbtitle006=Befehl kopiert
+mbmsg006=Befehl wurde in die Zwischenablage kopiert
+
+win001=Es ist auch m\u00f6glich, alle Python-Pakete mithilfe eines PowerShell-Terminals zu entfernen.\nVerwenden Sie die Schaltfl\u00e4che \u201eBefehl kopieren\u201c, um den Befehl zu kopieren und ihn dann in einem PowerShell-Terminalfenster auszuf\u00fchren.\nDamit dies erfolgreich ist, muss LibreOffice geschlossen sein.
+linux001=Es ist auch m\u00f6glich, alle Python-Pakete \u00fcber ein Terminal zu entfernen.\nVerwenden Sie die Schaltfl\u00e4che \u201eBefehl kopieren\u201c, um den Befehl zu kopieren und ihn dann in einem Terminalfenster auszuf\u00fchren.\nDamit dies erfolgreich ist, muss LibreOffice geschlossen sein.
+
+ctl001=Befehl kopieren
+ctlTip001=Terminalbefehl in Zwischenablage kopieren
+
+uninstall01=Python-Pakete deinstallieren
+uninstall02=Deinstallieren
