--- a/oxt/resources/pipstrings_en_US.properties
+++ b/oxt/resources/pipstrings_en_US.properties
@@ -36,3 +36,22 @@ msg22=Oxt name {} does not match installed name {}.\nThe extensions must be name
 title01=
 title02=INFO
 title03=Post Processing
+
+mbtitle001=Info
+mbmsg001=Nothing Selected
+mbtitle002=Confirmation
+mbmsg002=Are you sure you want to uninstall selected packages?
+mbmsg003=All packages have been uninstalled
+mbmsg004=Not all packages could be uninstalled. See Log File.
+mbmsg005=It is important that LibreOffice be a fresh start before uninstalling any packages.\nPlease restart LibreOffice and then uninstall if needed.\n\nAfter uninstall if this Extension is not removed then the Python packages will be installed again when LibreOffice starts.\n\nAlso, see log file after uninstall for any errors.
+mbtitle006=Command copied
+mbmsg006=Command has been copied to the clipboard
+
+win001=It is also possible to remove all the python packages using a PowerShell Terminal.\nUs the Copy Command button to copy the command and the run the command in a PowerShell terminal window.\nLibreOffice must be closed for this to be successful.
+linux001=It is also possible to remove all the python packages using a Terminal.\nUs the Copy Command button to copy the command and the run the command in a Terminal window.\nLibreOffice must be closed for this to be successful.
+
+ctl001=Copy Command
+ctlTip001=Copy Terminal Command to Clipboard
+
+uninstall01=Uninstall Python Packages
+uninstall02=Uninstall
