--- a/oxt/resources/pipstrings_es.properties
+++ b/oxt/resources/pipstrings_es.properties
@@ -36,3 +36,22 @@ msg22=El nombre de Oxt {} no coincide con el nombre instalado {}.\nLas extension
 # title01=
 title02=\u0049\u004e\u0046\u004f\u0052\u004d\u0041\u0043\u0049\u00d3\u004e
 title03=Postprocesamiento
+
+mbtitle001=Informaci\u00f3n
+mbmsg001=No se seleccion\u00f3 nada
+mbtitle002=Confirmaci\u00f3n
+mbmsg002=\u00bfEst\u00e1 seguro de que desea desinstalar los paquetes seleccionados?
+mbmsg003=Se han desinstalado todos los paquetes
+mbmsg004=No se pudieron desinstalar todos los paquetes. Consulte el archivo de registro.
+mbmsg005=Es ist wichtig, dass LibreOffice neu gestartet wird, bevor Pakete deinstalliert werden.\nBitte starten Sie LibreOffice neu und deinstallieren Sie es dann bei Bedarf.\n\nWenn diese Erweiterung nach der Deinstallation nicht entfernt wird, werden die Python-Pakete beim Start von LibreOffice erneut installiert.\n\nSuchen Sie nach der Deinstallation auch in der Protokolldatei nach etwaigen Fehlern.
+mbtitle006=Comando copiado
+mbmsg006=El comando se ha copiado al portapapeles
+
+win001=Tambi\u00e9n es posible eliminar todos los paquetes de Python mediante una terminal de PowerShell.\nUtilice el bot\u00f3n Copiar comando para copiar el comando y ejecutarlo en una ventana de terminal de PowerShell.\nPara que esto funcione correctamente, LibreOffice debe estar cerrado.
+linux001=Tambi\u00e9n es posible eliminar todos los paquetes de Python mediante una terminal.\nUtilice el bot\u00f3n Copiar comando para copiar el comando y ejecutarlo en una ventana de terminal.\nPara que esto funcione correctamente, LibreOffice debe estar cerrado.
+
+ctl001=Copiar comando
+ctlTip001=Copiar comando de terminal al portapapeles
+
+uninstall01=Desinstalar paquetes de Python
+uninstall02=Desinstalar
