--- a/oxt/resources/pipstrings_fr.properties
+++ b/oxt/resources/pipstrings_fr.properties
@@ -36,3 +36,22 @@ msg22=Le nom Oxt {} ne correspond pas au nom \u0069\u006e\u0073\u0074\u0061\u006
 # title01=
 title02=INFO
 title03=Post-traitement
+
+mbtitle001=Info
+mbmsg001=Rien de s\u00e9lectionn\u00e9
+mbtitle002=Confirmation
+mbmsg002=\u00cates-vous s\u00fbr de vouloir d\u00e9sinstaller les paquets s\u00e9lectionn\u00e9s\u00a0?
+mbmsg003=Tous les paquets ont \u00e9t\u00e9 d\u00e9sinstall\u00e9s
+mbmsg004=Tous les paquets n\u0027ont pas pu \u00eatre d\u00e9sinstall\u00e9s. Voir le fichier journal.
+mbmsg005=Il est important que LibreOffice soit \u00e0 nouveau op\u00e9rationnel avant de d\u00e9sinstaller des packages.\nVeuillez red\u00e9marrer LibreOffice, puis d\u00e9sinstaller si n\u00e9cessaire.\n\nApr\u00e8s la d\u00e9sinstallation, si cette extension n\u0027est pas supprim\u00e9e, les packages Python seront r\u00e9install\u00e9s au d\u00e9marrage de LibreOffice.\n\nConsultez \u00e9galement le fichier journal apr\u00e8s la d\u00e9sinstallation pour d\u00e9tecter d\u0027\u00e9ventuelles erreurs.
+mbtitle006=Commande copi\u00e9e
+mbmsg006=La commande a \u00e9t\u00e9 copi\u00e9e dans le presse-papiers
+
+win001=Il est \u00e9galement possible de supprimer tous les packages Python \u00e0 l\u0027aide d\u0027un terminal PowerShell.\nUtilisez le bouton Copier la commande pour copier la commande et ex\u00e9cutez-la dans une fen\u00eatre de terminal PowerShell.\nLibreOffice doit \u00eatre ferm\u00e9 pour que cela r\u00e9ussisse.
+linux001=Il est \u00e9galement possible de supprimer tous les packages Python \u00e0 l\u0027aide d\u0027un terminal.\nUtilisez le bouton Copier la commande pour copier la commande et ex\u00e9cutez-la dans une fen\u00eatre de terminal.\nLibreOffice doit \u00eatre ferm\u00e9 pour que cela r\u00e9ussisse.
+
+ctl001=Copier la commande
+ctlTip001=Copier la commande du terminal dans le presse-papiers
+
+uninstall01=D\u00e9sinstaller les packages Python
+uninstall02=D\u00e9sinstaller
