--- a/oxt/resources/pipstrings_hu.properties
+++ b/oxt/resources/pipstrings_hu.properties
@@ -36,3 +36,22 @@ msg22=Az Oxt \u006e\u00e9\u0076 {} nem egyezik a \u0074\u0065\u006c\u0065\u0070\
 # title01=
 title02=\u0049\u004e\u0046\u004f\u0052\u004d\u00c1\u0043\u0049\u00d3
 title03=\u0055\u0074\u00f3\u0066\u0065\u006c\u0064\u006f\u006c\u0067\u006f\u007a\u00e1\u0073
+
+mbtitle001=Inform\u00e1ci\u00f3
+mbmsg001=Semmi nincs kiv\u00e1lasztva
+mbtitle002=Meger\u0151s\u00edt\u00e9s
+mbmsg002=Biztosan elt\u00e1vol\u00edtja a kiv\u00e1lasztott csomagokat?
+mbmsg003=Minden csomag elt\u00e1vol\u00edtva
+mbmsg004=Nem minden csomagot lehetett elt\u00e1vol\u00edtani. L\u00e1sd: Napl\u00f3f\u00e1jl.
+mbmsg005=Fontos, hogy a LibreOffice \u00fajrakezdje a csomagok elt\u00e1vol\u00edt\u00e1s\u00e1t.\nK\u00e9rj\u00fck, ind\u00edtsa \u00fajra a LibreOffice-ot, majd t\u00e1vol\u00edtsa el, ha sz\u00fcks\u00e9ges.\n\nAz elt\u00e1vol\u00edt\u00e1s ut\u00e1n, ha ezt a b\u0151v\u00edtm\u00e9nyt nem t\u00e1vol\u00edtja el, a Python-csomagok \u00fajra telep\u00edt\u00e9sre ker\u00fclnek a LibreOffice ind\u00edt\u00e1sakor.\n\nAz elt\u00e1vol\u00edt\u00e1s ut\u00e1n tekintse meg a napl\u00f3f\u00e1jlt az esetleges hib\u00e1k\u00e9rt.
+mbtitle006=Parancs m\u00e1solva
+mbmsg006=A parancs a v\u00e1g\u00f3lapra m\u00e1solva
+
+win001=Lehet\u0151s\u00e9g van az \u00f6sszes python-csomag elt\u00e1vol\u00edt\u00e1s\u00e1ra is egy PowerShell-termin\u00e1l haszn\u00e1lat\u00e1val.\nA Parancs m\u00e1sol\u00e1sa gombbal m\u00e1solja a parancsot, majd futtassa a parancsot egy PowerShell-termin\u00e1lablakban.\nA LibreOffice-t be kell z\u00e1rni, hogy ez sikeres legyen.
+linux001=Lehet\u0151s\u00e9g van az \u00f6sszes python-csomag elt\u00e1vol\u00edt\u00e1s\u00e1ra termin\u00e1l haszn\u00e1lat\u00e1val.\nHaszn\u00e1lja a Parancs m\u00e1sol\u00e1sa gombot a parancs m\u00e1sol\u00e1s\u00e1hoz, majd futtassa a parancsot egy termin\u00e1lablakban.\nA LibreOffice-t be kell z\u00e1rni, hogy ez sikeres legyen.
+
+ctl001=Parancs m\u00e1sol\u00e1sa
+ctlTip001=A termin\u00e1lparancs m\u00e1sol\u00e1sa a v\u00e1g\u00f3lapra
+
+uninstall01=Python csomagok elt\u00e1vol\u00edt\u00e1sa
+uninstall02=Elt\u00e1vol\u00edt\u00e1s
