--- a/oxt/resources/pipstrings_it.properties
+++ b/oxt/resources/pipstrings_it.properties
@@ -36,3 +36,22 @@ msg22=Il nome Oxt {} non corrisponde al nome installato: {}.\nLe estensioni devo
 # title01=
 title02=INFO
 title03=Post-elaborazione
+
+mbtitle001=Info
+mbmsg001=Nessuna selezione
+mbtitle002=Conferma
+mbmsg002=Sei sicuro di voler disinstallare i pacchetti selezionati?
+mbmsg003=Tutti i pacchetti sono stati disinstallati
+mbmsg004=Non \u00e8 stato possibile disinstallare tutti i pacchetti. Consultare il file di registro.
+mbmsg005=\u00c8 importante che LibreOffice sia un nuovo inizio prima di disinstallare qualsiasi pacchetto.\nRiavviare LibreOffice e quindi disinstallare se necessario.\n\nDopo la disinstallazione, se questa estensione non viene rimossa, i pacchetti Python verranno installati di nuovo all\u0027avvio di LibreOffice.\n\nInoltre, vedere il file di registro dopo la disinstallazione per eventuali errori.
+mbtitle006=Comando copiato
+mbmsg006=Il comando \u00e8 stato copiato negli appunti
+
+win001=\u00c8 anche possibile rimuovere tutti i pacchetti python usando un terminale PowerShell.\nUsa il pulsante Copia comando per copiare il comando ed eseguirlo in una finestra del terminale PowerShell.\nLibreOffice deve essere chiuso affinch\u00e9 questa operazione abbia successo.
+linux001=\u00c8 anche possibile rimuovere tutti i pacchetti python tramite un Terminale.\nUtilizzare il pulsante Copia comando per copiare il comando ed eseguirlo in una finestra Terminale.\nLibreOffice deve essere chiuso affinch\u00e9 questa operazione abbia successo.
+
+ctl001=Copia comando
+ctlTip001=Copia comando terminale negli appunti
+
+uninstall01=Disinstalla pacchetti Python
+uninstall02=Disinstalla
