--- a/oxt/resources/pipstrings_nl.properties
+++ b/oxt/resources/pipstrings_nl.properties
@@ -36,3 +36,22 @@ msg22=Oxt-naam {} komt niet overeen met de \u0067\u0065\u00ef\u006e\u0073\u0074\
 # title01=
 title02=INFORMATIE
 title03=Nabewerking
+
+mbtitle001=Info
+mbmsg001=Niets geselecteerd
+mbtitle002=Bevestiging
+mbmsg002=Weet u zeker dat u de geselecteerde pakketten wilt verwijderen?
+mbmsg003=Alle pakketten zijn verwijderd
+mbmsg004=Niet alle pakketten konden worden verwijderd. Zie Logbestand.
+mbmsg005=Het is belangrijk dat LibreOffice een frisse start is voordat u pakketten verwijdert.\nStart LibreOffice opnieuw op en verwijder indien nodig.\n\nAls deze extensie na het verwijderen niet is verwijderd, worden de Python-pakketten opnieuw ge\u00efnstalleerd wanneer LibreOffice start.\n\nBekijk ook het logbestand na het verwijderen voor eventuele fouten.
+mbtitle006=Opdracht gekopieerd
+mbmsg006=Opdracht is gekopieerd naar het klembord
+
+win001=Het is ook mogelijk om alle python-pakketten te verwijderen met een PowerShell Terminal.\nGebruik de knop Copy Command om de opdracht te kopi\u00ebren en voer de opdracht uit in een PowerShell-terminalvenster.\nLibreOffice moet gesloten zijn om dit te laten slagen.
+linux001=Het is ook mogelijk om alle python-pakketten te verwijderen met behulp van een Terminal.\nGebruik de knop Copy Command om de opdracht te kopi\u00ebren en voer de opdracht uit in een Terminal-venster.\nLibreOffice moet gesloten zijn om dit te laten slagen.
+
+ctl001=Kopieer opdracht
+ctlTip001=Kopieer Terminalopdracht naar Klembord
+
+uninstall01=Python-pakketten verwijderen
+uninstall02=Verwijderen
