--- a/oxt/resources/pipstrings_ko.properties
+++ b/oxt/resources/pipstrings_ko.properties
@@ -34,3 +34,22 @@ msg22=Oxt \uc774\ub984 {} \uc774\u0020\uc124\uce58\ub41c\u0020\uc774\ub984 {}\n\
 # title01=
 title02=\uc815\ubcf4
 title03=\ud6c4\ucc98\ub9ac
+
+mbtitle001=\uc815\ubcf4
+mbmsg001=\uc120\ud0dd\ud55c \uac83\uc774 \uc5c6\uc74c
+mbtitle002=\ud655\uc778
+mbmsg002=\uc120\ud0dd\ud55c \ud328\ud0a4\uc9c0\ub97c \uc81c\uac70\ud558\uc2dc\uaca0\uc2b5\ub2c8\uae4c?
+mbmsg003=\ubaa8\ub4e0 \ud328\ud0a4\uc9c0\uac00 \uc81c\uac70\ub418\uc5c8\uc2b5\ub2c8\ub2e4
+mbmsg004=\ubaa8\ub4e0 \ud328\ud0a4\uc9c0\ub97c \uc81c\uac70\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4. \ub85c\uadf8 \ud30c\uc77c\uc744 \ucc38\uc870\ud558\uc138\uc694.
+mbmsg005=\ud328\ud0a4\uc9c0\ub97c \uc81c\uac70\ud558\uae30 \uc804\uc5d0 LibreOffice\ub97c \uc0c8\ub85c \uc2dc\uc791\ud558\ub294 \uac83\uc774 \uc911\uc694\ud569\ub2c8\ub2e4.\nLibreOffice\ub97c \ub2e4\uc2dc \uc2dc\uc791\ud55c \ub2e4\uc74c \ud544\uc694\ud55c \uacbd\uc6b0 \uc81c\uac70\ud558\uc138\uc694.\n\n\uc81c\uac70\ud55c \ud6c4 \uc774 \ud655\uc7a5 \ud504\ub85c\uadf8\ub7a8\uc744 \uc81c\uac70\ud558\uc9c0 \uc54a\uc73c\uba74 LibreOffice\uac00 \uc2dc\uc791\ub420 \ub54c Python \ud328\ud0a4\uc9c0\uac00 \ub2e4\uc2dc \uc124\uce58\ub429\ub2c8\ub2e4.\n\n\ub610\ud55c \uc81c\uac70 \ud6c4 \ub85c\uadf8 \ud30c\uc77c\uc5d0\uc11c \uc624\ub958\uac00 \uc788\ub294\uc9c0 \ud655\uc778\ud558\uc138\uc694.
+mbtitle006=\uba85\ub839 \ubcf5\uc0ac\ub428
+mbmsg006=\uba85\ub839\uc774 \ud074\ub9bd\ubcf4\ub4dc\uc5d0 \ubcf5\uc0ac\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
+
+win001=PowerShell Terminal\uc744 \uc0ac\uc6a9\ud558\uc5ec \ubaa8\ub4e0 \ud30c\uc774\uc36c \ud328\ud0a4\uc9c0\ub97c \uc81c\uac70\ud558\ub294 \uac83\ub3c4 \uac00\ub2a5\ud569\ub2c8\ub2e4.\nCopy Command \ubc84\ud2bc\uc744 \uc0ac\uc6a9\ud558\uc5ec \uba85\ub839\uc744 \ubcf5\uc0ac\ud558\uace0 PowerShell Terminal \ucc3d\uc5d0\uc11c \uba85\ub839\uc744 \uc2e4\ud589\ud569\ub2c8\ub2e4.\n\uc774\ub97c \uc131\uacf5\ud558\ub824\uba74 LibreOffice\ub97c \ub2eb\uc544\uc57c \ud569\ub2c8\ub2e4.
+linux001=\ud130\ubbf8\ub110\uc744 \uc0ac\uc6a9\ud558\uc5ec \ubaa8\ub4e0 \ud30c\uc774\uc36c \ud328\ud0a4\uc9c0\ub97c \uc81c\uac70\ud558\ub294 \uac83\ub3c4 \uac00\ub2a5\ud569\ub2c8\ub2e4.\nCopy Command \ubc84\ud2bc\uc744 \uc0ac\uc6a9\ud558\uc5ec \uba85\ub839\uc744 \ubcf5\uc0ac\ud558\uace0 \ud130\ubbf8\ub110 \ucc3d\uc5d0\uc11c \uba85\ub839\uc744 \uc2e4\ud589\ud569\ub2c8\ub2e4.\n\uc774\ub97c \uc131\uacf5\ud558\ub824\uba74 LibreOffice\ub97c \ub2eb\uc544\uc57c \ud569\ub2c8\ub2e4.
+
+ctl001=Copy Command
+ctlTip001=\ud130\ubbf8\ub110 \uba85\ub839\uc744 \ud074\ub9bd\ubcf4\ub4dc\uc5d0 \ubcf5\uc0ac
+
+uninstall01=Python \ud328\ud0a4\uc9c0 \uc81c\uac70
+uninstall02=\uc81c\uac70
