--- a/oxt/resources/pipstrings_pt.properties
+++ b/oxt/resources/pipstrings_pt.properties
@@ -36,3 +36,22 @@ msg22=O nome Oxt {} \u006e\u00e3\u006f corresponde ao nome instalado: {}.\nAs \u
 # title01=
 title02=\u0049\u004e\u0046\u004f\u0052\u004d\u0041\u00c7\u00c3\u004f
 title03=\u0050\u00f3\u0073\u002d\u0070\u0072\u006f\u0063\u0065\u0073\u0073\u0061\u006d\u0065\u006e\u0074\u006f
+
+mbtitle001=Info
+mbmsg001=Nada selecionado
+mbtitle002=Confirma\u00e7\u00e3o
+mbmsg002=Tem certeza de que deseja desinstalar os pacotes selecionados?
+mbmsg003=Todos os pacotes foram desinstalados
+mbmsg004=Nem todos os pacotes puderam ser desinstalados. Veja o arquivo de log.
+mbmsg005=\u00c9 importante que o LibreOffice seja um novo come\u00e7o antes de desinstalar quaisquer pacotes.\nReinicie o LibreOffice e desinstale se necess\u00e1rio.\n\nAp\u00f3s a desinstala\u00e7\u00e3o, se esta extens\u00e3o n\u00e3o for removida, os pacotes Python ser\u00e3o instalados novamente quando o LibreOffice iniciar.\n\nAl\u00e9m disso, consulte o arquivo de log ap\u00f3s a desinstala\u00e7\u00e3o para quaisquer erros.
+mbtitle006=Comando copiado
+mbmsg006=O comando foi copiado para a \u00e1rea de transfer\u00eancia
+
+win001=Tamb\u00e9m \u00e9 poss\u00edvel remover todos os pacotes python usando um Terminal PowerShell.\nUse o bot\u00e3o Copiar Comando para copiar o comando e executar o comando em uma janela de terminal PowerShell.\nO LibreOffice deve ser fechado para que isso seja bem-sucedido.
+linux001=Tamb\u00e9m \u00e9 poss\u00edvel remover todos os pacotes python usando um Terminal.\nUse o bot\u00e3o Copiar Comando para copiar o comando e executar o comando em uma janela do Terminal.\nO LibreOffice deve ser fechado para que isso seja bem-sucedido.
+
+ctl001=Copiar comando
+ctlTip001=Copiar comando do terminal para a \u00e1rea de transfer\u00eancia
+
+uninstall01=Desinstalar Pacotes Python
+uninstall02=Desinstalar
