--- a/oxt/resources/pipstrings_zh.properties
+++ b/oxt/resources/pipstrings_zh.properties
@@ -34,3 +34,22 @@ msg22=Oxt \u540d\u79f0 {} \u4e0e\u5df2\u5b89\u88c5\u540d\u79f0 {}\n\u4e0d\u5339\
 # title01=
 title02=\u8cc7\u8a0a
 title03=\u5f8c\u8655\u7406
+
+mbtitle001=\u4fe1\u606f
+mbmsg001=\u672a\u9009\u62e9\u4efb\u4f55\u5185\u5bb9
+mbtitle002=\u786e\u8ba4
+mbmsg002=\u60a8\u786e\u5b9a\u8981\u5378\u8f7d\u6240\u9009\u8f6f\u4ef6\u5305\u5417\uff1f
+mbmsg003=\u6240\u6709\u8f6f\u4ef6\u5305\u5747\u5df2\u5378\u8f7d
+mbmsg004=\u5e76\u975e\u6240\u6709\u8f6f\u4ef6\u5305\u90fd\u53ef\u5378\u8f7d\u3002\u8bf7\u53c2\u9605\u65e5\u5fd7\u6587\u4ef6\u3002
+mbmsg005=\u5728\u5378\u8f7d\u4efb\u4f55\u8f6f\u4ef6\u5305\u4e4b\u524d\uff0c\u52a1\u5fc5\u91cd\u65b0\u542f\u52a8 LibreOffice\u3002\n\u8bf7\u91cd\u65b0\u542f\u52a8 LibreOffice\uff0c\u7136\u540e\u6839\u636e\u9700\u8981\u5378\u8f7d\u3002\n\u5982\u679c\u5378\u8f7d\u540e\u672a\u5220\u9664\u6b64\u6269\u5c55\uff0c\u5219\u5728 LibreOffice \u542f\u52a8\u65f6\u5c06\u518d\u6b21\u5b89\u88c5 Python \u8f6f\u4ef6\u5305\u3002\n\u6b64\u5916\uff0c\u5378\u8f7d\u540e\u8bf7\u67e5\u770b\u65e5\u5fd7\u6587\u4ef6\u4ee5\u4e86\u89e3\u4efb\u4f55\u9519\u8bef\u3002
+mbtitle006=\u547d\u4ee4\u5df2\u590d\u5236
+mbmsg007=\u547d\u4ee4\u5df2\u590d\u5236\u5230\u526a\u8d34\u677f
+
+win001=\u8fd8\u53ef\u4ee5\u4f7f\u7528 PowerShell \u7ec8\u7aef\u5220\u9664\u6240\u6709 Python \u5305\u3002\n\u4f7f\u7528\u201c\u590d\u5236\u547d\u4ee4\u201d\u6309\u94ae\u590d\u5236\u547d\u4ee4\uff0c\u7136\u540e\u5728 PowerShell \u7ec8\u7aef\u7a97\u53e3\u4e2d\u8fd0\u884c\u8be5\u547d\u4ee4\u3002\n\u5fc5\u987b\u5173\u95ed LibreOffice \u624d\u80fd\u6210\u529f\u3002
+linux001=\u8fd8\u53ef\u4ee5\u4f7f\u7528\u7ec8\u7aef\u5220\u9664\u6240\u6709 Python \u5305\u3002\n\u4f7f\u7528\u201c\u590d\u5236\u547d\u4ee4\u201d\u6309\u94ae\u590d\u5236\u547d\u4ee4\uff0c\u7136\u540e\u5728\u7ec8\u7aef\u7a97\u53e3\u4e2d\u8fd0\u884c\u8be5\u547d\u4ee4\u3002\n\u5fc5\u987b\u5173\u95ed LibreOffice \u624d\u80fd\u6210\u529f\u3002
+
+ctl001=\u590d\u5236\u547d\u4ee4
+ctlTip001=\u5c06\u7ec8\u7aef\u547d\u4ee4\u590d\u5236\u5230\u526a\u8d34\u677f
+
+uninstall01=\u5e76\u975e\u6240\u6709\u8f6f\u4ef6\u5305\u90fd\u53ef\u5378\u8f7d\u3002\u8bf7\u53c2\u9605\u65e5\u5fd7\u6587\u4ef6\u3002
+uninstall02=\u5378\u8f7d
